added subscriptions and docker
